--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.4",
     "bootstrap": "^5.2.3",
     "sass": "^1.57.1",
     "vue": "^3.2.45"
